# internship-task-virose

./: LICENSE  README.md
task1/: README.md  bahasaDengklek.cpp  (+1 more)
task2/: CMakeLists.txt  README.md  main.cpp
task2/include/: MotionMovie.h  MotionUnit.h
task2/src/: MotionMovie.cpp  MotionUnit.cpp
task4/PC/: CMakeLists.txt  data.json  main.cpp
task4/PC/build1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  serial_lib.vcxproj.filters  task4.vcxproj.filters
task4/PC/build1/.cmake/api/v1/reply/: cache-v2-78453ba91dad21f8d73a.json  codemodel-v2-30d043cc6028e8f18ffc.json  index-2025-10-19T22-13-52-0720.json  target-ALL_BUILD-RelWithDebInfo-3ff97659b913998a0bbf.json  target-serial_lib-Debug-b574a37dc76d3ae18d6a.json  target-task4-Debug-315d309c42cc740c29bb.json  target-task4-MinSizeRel-464cc903550b17216077.json  target-task4-RelWithDebInfo-ba9800788ef74c7e4475.json
task4/PC/build1/Debug/: serial_lib.lib
task4/PC/build1/serial_lib.dir/Debug/serial_lib.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
task4/PC/build1/task4.dir/Debug/: task4.exe.recipe  task4.ilk
task4/PC/build1/task4.dir/Debug/task4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
task4/PC/build1/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
task4/PC/build1/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
(+12 files in other folders)
